    - Bring rectangle-equation collision.
    - Bring triangle-equation collision.
    - Bring triangle-quad collision.
    - Bring triangle-rectangle collision.
    - Bring triangle-triangle collision.
    - Bring circle-equation collision.
    - Bring circle-quad collision.
    - Bring circle-rectangle collision.
    - Bring circle-line collision.

  * Edit misc module
    - Add support for base64.
    - Use the environment parameter in bunny_evaluate.

 -- Jason Brillante <damdoshi@hotmail.com>  Tue, 12 March 2018 12:00:00 +0100

liblapin-dev (1.11) stable; urgency=low

  * Add a text module that can handle png font and real font and act as textbox.
    Based on clipable.
  * Add a configuration module that can load and save in different formats and
    handle all the same way
  * Handle INI format
  * Handle DABSIC format
  * Add bunny_read_ini and bunny_write_ini to read and write from and to memory instead of file
  * Add bunny_ini_count_field
  * Deprecate bunny_ini module, use bunny_configuration instead now
  * Add network related events
  * Down the screen resfresh rate if the main loop is too slow.
  * Reorganize privates header.
  * Add bunny_get_fullscreen_modes

  * Add a security module to cipher configuration file, assets and saved games.
    **Only for low security needs*
  * Add a hash module
  * Add a bunny_load_file and bunny_save_file
  * Add bunny_thread_push to push a single task into a bunny threadpool
  * Add a stack, queue, list, vector, map, bitfield module
  * Add a pool module for fast memory alloc and free
  * Add a stack on stack module (Container that act as stack, with all its alloc on the real stack)
  * Add bunny_evaluate to compute mathematic operations. Supported operators
    are +-*/%<><=>= == != () and ?:. Currently, variable environment is ignored.
  * Add a collision module that includes triangle collision
  * Add a bunny_unix module
  * Add ANTIALIASING flag for window style